cuda_ops_test/gen_bang_results/5_Matrix_scalar_multiplication-output.txt
warning: CUDA version 12.1 is only partially supported
./cuda_ops/5_Matrix_scalar_multiplication.cu:2:10: fatal error: 'ATen/cuda/CUDAContext.h' file not found
    2 | #include <ATen/cuda/CUDAContext.h>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~
